Revision history for CPAN-Mini

1.100593  2010-02-28 16:58:34 America/New_York
          fix a previously unreached bit of code re: basename

1.100592  2010-02-28 15:15:36 America/New_York
          fix insanely stupid typo; need more tests!

1.100591  2010-02-28 15:11:03 America/New_York
          add an option to skip source code control files (thanks, brian d foy)

1.100590  2009-02-28
          add -C switch to allow alternate config file (thanks, brian d foy)
          getopt switches are now correctly case-sensitive (thanks, brian)
          improve subclassability for config file and output (thanks, brian)
          switch to Dist::Zilla for release management

0.576     2009-01-16
          add repo to metadata

0.575     2009-01-12
          add no_conn_cache argument

0.574     2008-11-26
          fix broken prereq declaration in Makefile.PL

0.573     2008-11-25
          switch to new File::Path API, do not suffer undef dirmodes
          write a RECENT file of the files mirrored in the latest run

0.572     2008-11-04
          add 'use File::HomeDir' to CPAN/Mini.pm (thanks DAGOLDEN)
          improve handling of trailing whitespace in config (thanks ANK)

0.571     2008-05-23
          set LWP::UserAgent's env_proxy option to use proxy (RT #36124 from
          IFOMICHEV)

          allow skip_cleanup in config

0.570     2008-05-01
          offline mode now (correctly) means that the remote is not checked for
          availability (RT #35563)

0.569     2008-04-30
          massive speed improvements by caching connection to remote mirror
          add offline mode (by request of ADAMK)
          add default config file location (by request of ADAMK)

0.568     2008-03-05
          [ no code changes ]
          fix distribution to remove resource forks (ugh!)

0.567     2008-02-05
          BUGFIX: actually respect -c option
          internal refactoring to make subclassing easier (DAGOLDEN)